# presentation-factory

./: .env.example  .gitignore  AGENTS.md  Makefile  QUICKSTART.md  README.md  pyproject.toml
.bob/: README.md  SMOKE_TEST.md  custom_modes.yaml  project.md
.bob/modes/: generate.md  review.md
.bob/presentation-factory/: README.md
.bob/presentation-factory/assets/: README.md
.bob/presentation-factory/brief-examples/: discovery-workshop.md  executive-ai-productivity.md  incomplete-brief.md
.bob/presentation-factory/checklists/: deck-quality.md  repository-validation.md
.bob/presentation-factory/examples/: README.md  component-patterns.md  ibm-complete-deck.html
.bob/presentation-factory/references/: accessibility-print.md  builder-guide.md  configuration-guide.md  content-and-narrative.md  css-guide.md  (+5 more)
.bob/rules-presentation-factory/: 01-arquitetura.md  02-conteudo-e-design.md  03-html-css-javascript.md  04-workflow-e-validacao.md
.github/workflows/: build-package.yml
catalog/: models.toml
clients/banco-do-brasil/: entity.toml
clients/caixa/: entity.toml
clients/ibm-enterprise/: entity.toml
clients/ibm-neutral/: entity.toml
organizations/ibm/: entity.toml
prompts/: presentation-generation.md
src/ibm_presentation_factory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/presentation_factory/: __init__.py  __main__.py  builder.py  cli.py  config.py  prompt.md
tests/: test_builder.py
tools/: extrair-ri.mjs  gerar-account-planning.mjs  gerar-deck.mjs  valores-modelo-account-planning.json  valores-modelo.json
(+92 files in other folders)
