[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ibm-presentation-factory"
version = "0.1.0"
description = "Reproducible presentation package builder"
requires-python = ">=3.11"

[project.scripts]
presentation-factory = "presentation_factory.cli:main"

[tool.setuptools.package-data]
presentation_factory = ["prompt.md"]
